--- a/templates/dashboard/potential_clients.html
+++ b/templates/dashboard/potential_clients.html
@@ -4,11 +4,12 @@
 {% block title %}| Potential Clients{% endblock %}
 
 
-<div class="app-body">
 
 <!-- ############ PAGE START-->
 {% block content %}
-<div class="app-body-inner">
+    <div id="content" class="app-content box-shadow-z2 pjax-container" role="main">
+    <div class="app-body">
+    <div class="app-body-inner">
 	<div class="row-col">
 		<div class="white bg b-b">
 			<div class="navbar no-radius box-shadow-z1">
