--- a/templates/dashboard/pricing.html
+++ b/templates/dashboard/pricing.html
@@ -4,9 +4,10 @@
 {% block title %}| Pricing {% endblock %}
 
 
-<div class="app-body">
 <!-- ############ PAGE START-->
 {% block content %}
+    <div id="content" class="app-content box-shadow-z2 pjax-container" role="main">
+<div class="app-body">
 <div class="app-body-inner">
 	<div class="row-col">
 		<div class="white bg b-b">
